Fixed some react-avatar-cropper errors

--- a/components/scss/style.scss
+++ b/components/scss/style.scss
@@ -19,6 +19,10 @@ p, ul, ol, li, a {
 	font-size: 18px;
 }
 
+a {
+	font-color: $plum;
+}
+
 h1 {
 	font-weight: 400;
 	font-size: 40px;
